main.tf
provider "aws" {
  region     = "${var.region}"
}

# Create a VPC to launch our instances into
resource "aws_vpc" "default" {
  cidr_block = "10.0.0.0/16"
}

# Create an internet gateway to give our subnet access to the outside world
resource "aws_internet_gateway" "default" {
  vpc_id = "${aws_vpc.default.id}"
}

# Grant the VPC internet access on its main route table
resource "aws_route" "internet_access" {
  route_table_id         = "${aws_vpc.default.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.default.id}"
}

# Create a subnet to launch our instances into
resource "aws_subnet" "default" {
  vpc_id                  = "${aws_vpc.default.id}"
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

# A security group for the ELB so it is accessible via the web
resource "aws_security_group" "elb" {
  name        = "metrosystems_sg"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.default.id}"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Our default security group to access
# the instances over SSH and HTTP
resource "aws_security_group" "default" {
  name        = "metrostar-exercise-sg"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.default.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from the VPC
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elb" "web" {
  name = "metrostar-exercise-elb"

  subnets         = ["${aws_subnet.default.id}"]
  security_groups = ["${aws_security_group.elb.id}"]
  instances       = ["${aws_instance.web.id}"]

  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }
}

resource "aws_instance" "web" {
  ami           = "${var.ami}"
  instance_type = "${var.instance_type}"
  key_name      = "${var.key_name}"

  connection {
    type     = "ssh"
    user     = "ec2-user"
    private_key = "${file("~/.ssh/robs-mbp.pem")}"
  }

  provisioner "file" {
    source      = "files/php.ini"
    destination = "/tmp/php.ini"
  }

  provisioner "file" {
    source      = "files/index.php"
    destination = "/tmp/index.php"
  }

  provisioner "file" {
    source      = "files/user_table.sql"
    destination = "/tmp/user_table.sql"
  }

  provisioner "file" {
    source      = "files/script.sh"
    destination = "/tmp/script.sh"
  }

  provisioner "file" {
    source      = "share/robs-mbp.pem"
    destination = "/tmp/robs-mbp.pem"
  }

  provisioner "file" {
    source      = "share/config"
    destination = "/tmp/config"
  }

  provisioner "file" {
    source      = "share/credentials"
    destination = "/tmp/credentials"
  }

  provisioner "remote-exec" {
    inline = [
      "chmod +x /tmp/script.sh",
      "/tmp/script.sh ${var.db_user} ${var.db_pwd}"
    ]
  }
}

resource "aws_eip" "ip" {
  instance = "${aws_instance.web.id}"
}

resource "aws_db_instance" "database" {
  allocated_storage     = 10
  storage_type          = "gp2"
  engine                = "mysql"
  engine_version        = "5.6.39"
  instance_class        = "db.t2.micro"
  name                  = "webdb"
  username              = "rob"
  password              = "dinx9one"
  parameter_group_name  = "default.mysql5.6",
  skip_final_snapshot   = true,
  tags                  = [
    {
      "Name" = "webdb"
    }
  ]
}
